bg changes make the things green and yea

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+    
     <main id="main">
         <div id="title">Yeezle Unlimited</div>
         <div id="guess" class="autocomplete"><input type="text" placeholder="Guess A Kanye Song" autocomplete="off" id="songGuess"><input type="submit" value="Guess" id="submit"></div>
@@ -25,6 +26,7 @@
            </div> -->
         </div>
     </main>
+    <div id="bgThing"></div>
     <div id="gameEnd">
         <div id="bgBlur"></div>
         <div id="results">
