--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1">
-    <title>Yeezle Unlimited</title>
+    <title>Duckwordle</title>
     <link rel="stylesheet" href="style.css">
     <script src="main.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="./assets/duck.png">
 </head>
 <body>
     
     <main id="main">
-        <div id="title">Yeezle Unlimited</div>
-        <div id="guess" class="autocomplete"><input type="text" placeholder="Guess A Kanye Song" autocomplete="off" id="songGuess"><input type="submit" value="Guess" id="submit"></div>
+        <div id="title">Duckwordle Unlimited</div>
+        <div id="guess" class="autocomplete"><input type="text" placeholder="Guess A Kendrick Song" autocomplete="off" id="songGuess"><input type="submit" value="Guess" id="submit"></div>
         <div id="game">
            <!-- <div class="gameRow">
                 <img src="./assets/mbdtf.jpg" class="cover"> 
